--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,6 @@ VERSION.txt
 !components/dash-core-components/tests/integration/upload/upload-assets/upft001.csv
 !components/dash-table/tests/assets/*.csv
 !components/dash-table/tests/selenium/assets/*.csv
+
+# Dependencies
+requirements.txt
